examples/test/testpolicy17449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17449
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key1: value41
      key9: value24
      key40: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value41
          key43: value14
          key3: value0
      podSelector:
        matchLabels:
          key11: value35
          key48: value19
